--- a/qutebrowser/.config/qutebrowser/autoconfig.yml
+++ b/qutebrowser/.config/qutebrowser/autoconfig.yml
@@ -16,6 +16,8 @@ settings:
   content.headers.user_agent:
     global: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko)
       Chrome/89.0.4389.90 Safari/537.36
+  content.javascript.can_access_clipboard:
+    global: true
   content.notifications.enabled:
     https://metro.co.uk: false
     https://www.reddit.com: false
