Create separate gitconfigs for different work
Create separate gitconfigs for different work

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,3 +1,8 @@
+[include]
+	path = ~/.gitconfig.personal
+[includeIf "gitdir:~/work/"]
+	path = ~/.gitconfig.work
+
 [user]
 	name = Karl Wikström
 [commit]
