--- a/qutebrowser/.config/qutebrowser/autoconfig.yml
+++ b/qutebrowser/.config/qutebrowser/autoconfig.yml
@@ -21,3 +21,6 @@ settings:
   content.notifications.enabled:
     https://metro.co.uk: false
     https://www.reddit.com: false
+  content.register_protocol_handler:
+    https://mail.google.com?extsrc=mailto&url=%25s: false
+    https://outlook.office.com?mailtouri=%25s: false
