--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -2,7 +2,7 @@
 monitor = ${env:MONITOR:}
 
 width = 100%
-height = 27
+height = 22
 radius = 0
 fixed-center = false
 
@@ -19,16 +19,16 @@ padding-left = 0
 padding-right = 2
 
 module-margin-left = 1
-module-margin-right = 2
+module-margin-right = 1
 
-font-0 = "Noto Sans Mono:size=10;1"
+font-0 = "NotoSansMono Nerd Font:style=Regular:size=10;1"
 font-1 = "Source Code Pro Semibold:size=10;1"
 font-2 = "Font Awesome 5 Free:style=Solid:size=10;1"
 font-3 = "Font Awesome 5 Brands:size=10;1"
 
 modules-left = i3
 modules-center =
-modules-right = wlan eth date powermenu
+modules-right = bluetooth wlan eth date powermenu
 
 tray-position =
 ;tray-padding =
@@ -66,6 +66,16 @@ label-visible-padding = 2
 label-urgent = %index%
 label-urgent-background = #BA2922
 label-urgent-padding = 2
+
+[module/bluetooth]
+type = custom/script
+exec = $HOME/.config/polybar/scripts/bluetooth.sh
+interval = 2
+click-left = exec blueberry
+click-right = exec $HOME/.config/polybar/scripts/toggle_bluetooth.sh
+format-padding = 1
+format-background = #2f2f38
+format-foreground = #2f2f38
 
 [module/wlan]
 type = internal/network
