--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -101,7 +101,7 @@ format-foreground = #2f2f38
 
 [module/wlan]
 type = internal/network
-interface = wlp0s20f3
+interface-type = wireless
 interval = 3.0
 
 format-connected = <ramp-signal> <label-connected>
@@ -121,7 +121,7 @@ ramp-signal-foreground = #2f2f38
 
 [module/eth]
 type = internal/network
-interface = enp0s3
+interface-type = wired
 interval = 3.0
 
 format-connected-padding = 2
