--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -20,6 +20,7 @@ bindsym $mod+Shift+q kill
 
 # start program launcher
 bindsym $mod+space exec --no-startup-id rofi -show drun
+bindsym $mod+Return exec konsole
 
 focus_wrapping no
 
