--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -21,6 +21,7 @@ bindsym $mod+Shift+q kill
 # start program launcher
 bindsym $mod+space exec --no-startup-id rofi -show drun
 bindsym $mod+Return exec konsole
+bindsym $mod+p exec spectacle --region --background --copy-image
 
 focus_wrapping no
 
