--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -88,6 +88,17 @@ set $ws6 6
 set $ws7 7
 set $ws8 8
 
+# place wrkspaces on select screens for easier transitions
+# between single and multi monitor setups
+workspace $ws1 output eDP1 primary
+workspace $ws2 output primary
+workspace $ws3 output primary
+workspace $ws4 output primary
+workspace $ws5 output primary
+workspace $ws6 output primary
+workspace $ws7 output primary
+workspace $ws8 output primary
+
 # switch to workspace
 bindsym $mod+1 workspace $ws1
 bindsym $mod+2 workspace $ws2
