--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -21,10 +21,8 @@ padding-right = 1
 module-margin-left = 0
 module-margin-right = 1
 
-font-0 = "NotoSansMono Nerd Font:style=Regular:size=10;1"
-font-1 = "Source Code Pro Semibold:size=10;1"
-font-2 = "Font Awesome 5 Free:style=Solid:size=10;1"
-font-3 = "Font Awesome 5 Brands:size=10;1"
+font-0 = "Noto Sans Mono:style=Regular:size=10;1"
+font-1 = "FontAwesome:style=Regular:size=10;1"
 
 modules-left = i3
 modules-center = date
