i3: remove window borders

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -1,7 +1,7 @@
 set $mod Mod1
 
-default_border pixel 1
-default_floating_border normal
+default_border none
+default_floating_border none
 
 hide_edge_borders none
 
