kmonad: update ergo 860 service description

--- a/kmonad/.config/systemd/user/kmonad-ergo_860.service
+++ b/kmonad/.config/systemd/user/kmonad-ergo_860.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=kmonad keyboard config for the Logitech Ergo 860 bluetooth keyboard
+Description=kmonad for Logitech Ergo 860
 
 [Service]
 Restart=always
