--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -181,7 +181,9 @@ for_window [class="(?i)*nextcloud*"] floating disable
 for_window [class="plasmashell" window_type="notification"] border none, move right 700px, move down 450px
 no_focus [class="plasmashell" window_type="notification"]
 
-for_window [title="Desktop — Plasma"] kill; floating enable; border none
+# Kill initial plasma window coving screen at startup.
+# Plasma >= 5.27
+for_window [title="Desktop @ QRect.*"] kill; floating enable; border none
 
 # switch to workspace with urgent window automatically
 for_window [urgent=latest] focus
