--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -197,7 +197,7 @@ bindsym $mod+Shift+r restart
 # enable transpanrancy
 #exec --no-startup-id picom --experimental-backends -b
 exec_always --no-startup-id picom -bc
-exec_always --no-startup-id feh --bg-fill ~/Pictures/wallpapers/dark_tux.png
+exec_always --no-startup-id feh --bg-fill ~/Pictures/wallpapers/gruv-arch.png
 
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec --no-startup-id qdbus-qt5 org.kde.ksmserver /KSMServer org.kde.KSMServerInterface.logout -1 -1 -1
@@ -241,15 +241,30 @@ mode "resize" {
 # Autostart applications
 exec_always --no-startup-id $HOME/.config/polybar/scripts/launch.sh
 
-# Theme colors
-client.focused #b0c4bb #2f2f38 #b0c4bb #81a2be #81a2be
-client.focused_inactive #b0c4bb #2f2f38 #b0c4bb #688486 #688486
-client.unfocused #b0c4bb #2f2f38 #b0c4bb #688486 #688486
-client.urgent #b0c4bb #2f2f38 #b0c4bb #688486 #688486
-client.placeholder #b0c4bb #2f2f38 #b0c4bb #688486 #688486
+#######
+#THEME#
+#######
 
-client.background #2f2f38
+# set primary gruvbox colorscheme colors
+set $bg #282828
+set $red #cc241d
+set $green #98971a
+set $yellow #d79921
+set $blue #458588
+set $purple #b16286
+set $aqua #689d68
+set $gray #a89984
+set $darkgray #1d2021
+set $lightgray #bdae93
 
+# class                 border|backgr|text|indicator|child_border
+client.focused          #665c54 #665c54 #eddbb2 #2e9ef4   #665c54
+client.focused_inactive #282828 #5f676a #ffffff #484e50   #5f676a
+client.unfocused        #3c3836 #3c3836 #a89984 #292d2e   #222222
+client.urgent           #cc241d #cc241d #ebdbb2 #cc241d   #cc241d
+client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
+
+client.background       #ffffff
 # Gaps
 gaps inner 10
 gaps outer -4
