--- a/qutebrowser/.config/qutebrowser/autoconfig.yml
+++ b/qutebrowser/.config/qutebrowser/autoconfig.yml
@@ -14,6 +14,8 @@ settings:
       normal:
         <Ctrl+j>: command-history-next
   content.headers.user_agent:
+    bing.com: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML,
+      like Gecko) Chrome/110.0.0.0 Safari/537.36 Edg/90.0.818.46
     global: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko)
       Chrome/89.0.4389.90 Safari/537.36
   content.javascript.can_access_clipboard:
