--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -88,7 +88,7 @@ set $ws7 7
 set $ws8 8
 set $ws9 9
 
-# place wrkspaces on select screens for easier transitions
+# place workspaces on select screens for easier transitions
 # between single and multi monitor setups
 workspace $ws1 output eDP1 primary
 workspace $ws2 output primary
