--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -13,16 +13,14 @@ font xft:URWGothic-Book 11
 
 floating_modifier $mod
 
-bindsym $mod+Shift+Return exec i3-sensible-terminal
+bindsym $mod+Shift+Return exec                 "i3-sensible-terminal"
+bindsym $mod+space        exec --no-startup-id "rofi -show drun"
+bindsym $mod+p            exec                 "spectacle --region --background --copy-image"
+
+focus_wrapping no
 
 # Window kill command
 bindsym $mod+Shift+q kill
-
-# start program launcher
-bindsym $mod+space exec --no-startup-id rofi -show drun
-bindsym $mod+p exec spectacle --region --background --copy-image
-
-focus_wrapping no
 
 # change focus
 bindsym $mod+h focus left
@@ -47,7 +45,7 @@ bindsym $mod+v split v;exec notify-send 'tile vertically'
 # bindsym $mod+q split toggle
 
 # toggle fullscreen mode for the focused container
-bindsym $mod+f fullscreen toggle
+# bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
