--- a/kmonad/install.conf.yaml
+++ b/kmonad/install.conf.yaml
@@ -1,5 +1,4 @@
 - link:
     ~/.config/kmonad: config
-    ~/.config/systemd/user/:
-      glob: true
-      path: systemd/*
+    ~/.config/systemd/user/kmonad-ergo_860.service:
+    ~/.config/systemd/user/kmonad-nembus.service:
