--- a/kanshi/config/config
+++ b/kanshi/config/config
@@ -18,6 +18,11 @@ profile {
 }
 
 profile {
+    output "Samsung Electric Company C34H89x H4ZRC05084" mode 3440x1440@59.973Hz
+    output eDP-1 disable
+}
+
+profile {
     output "Dell Inc. DELL U2719D CGLBKS2" mode 2560x1440@59.951Hz
     output eDP-1 disable
 }
