feat(mise): add more tools at home level

--- a/mise/config/config.toml
+++ b/mise/config/config.toml
@@ -1,5 +1,11 @@
 [tools]
 bat = "latest"
+dive = "latest"
 eza = "latest"
+fd = "latest"
+fzf = "latest"
 neovim = "latest"
+node = "latest"
 usage = "latest"
+zoxide = "latest"
+pnpm = "latest"
